RR방식 LB구현 - PR 2차 피드백 반영